--- a/nds.html
+++ b/nds.html
@@ -12,15 +12,16 @@
     <div id="navigation"></div>
     <div id="flex">
       <main>
+        <h1>Hieda no Akyuu's Nocturnal Discordant Symposium</h1>
+        <h2>
+            <a href="https://itch.io/jam/touhou-jam-11/rate/2248771" target="_blank">Game link</a>
+        </h2>
         <div id="gallery">
           <div id="main-image-container">
             <iframe width="500" height="300" src="https://www.youtube.com/embed/jvogrluFwM8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <br>
-        <h2>
-          <a href="https://itch.io/jam/touhou-jam-11/rate/2248771" target="_blank">Game link</a>
-        </h2>
         <br>
         <div id="description">
           <div class="description-image">
