--- a/rogoto.html
+++ b/rogoto.html
@@ -12,6 +12,10 @@
     <div id="navigation"></div>
     <div id="flex">
       <main>
+        <h1>Rogoto</h1>
+        <h2>
+          <a href="https://wardergrip.itch.io/rogoto" target="_blank">Game link</a>
+        </h2>
         <div id="gallery">
           <div id="main-image-container">
             <img id="main-image" src="assets/projects/RogotoThumbnail.jpg" alt="Main Image">
@@ -27,9 +31,6 @@
           </div>
         </div>
         <br>
-        <h2>
-          <a href="https://wardergrip.itch.io/rogoto" target="_blank">Game link</a>
-        </h2>
         <br>
         <div id="description">
           <div class="description-image">
