--- a/rogoto.html
+++ b/rogoto.html
@@ -49,6 +49,8 @@
           <p>I was one of the 3 programmers on this project. Most of my effort was focused on making the terrain generation but I also added onto other systems where needed, eventually ending up working on everything at least a little.</p>
           <br>
         </div>
+        <br>
+        <img src="assets/projects/HobbyAwardFinalist.png" alt="Rogoto">
       </main>
     </div>
 </body>
