--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
       <hr class="project-divider">
       <div class="project">
         <a href="cellularautomata.html" class="project-image">
-            <img src="assets/projects/CA.png" alt="Cellular Automata">
+            <img src="assets/projects/CellularAutomata.png" alt="Cellular Automata">
         </a>
         <div class="project-content">
             <a href="cellularautomata.html" class="project-title">Cellular Automata →</a>
