--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <img src="assets/testimage.png">
       <h1>Bas Ruckebusch | <a href="mailto:bas.ruckebusch@gmail.com">bas.ruckebusch@gmail.com</a></h1>
-      <p>This is my site put a better description here</p>
+      <p>I'm Bas and this is my portfolio site. You'll mainly find the projects I've worked on over the years here as well as some information on all of them. I am a game developer with a wide variety of skills and interests.</p>
     </main>
   </div>
 </body>
