--- a/navigation.html
+++ b/navigation.html
@@ -5,14 +5,14 @@
     </a>
     <a href="projects.html">
         <img src="assets/projectsbutton.png" class="default-img">
-        <img src="assets/button-hover.png" class="hover-img">
+        <img src="assets/projectsbutton-hover.png" class="hover-img">
     </a>
     <a href="/assets/ResumeBasRuckebusch.pdf" target="_blank">
         <img src="assets/resumebutton.png" class="default-img">
-        <img src="assets/button-hover.png" class="hover-img">
+        <img src="assets/resumebutton-hover.png" class="hover-img">
     </a>
     <a href="about.html">
         <img src="assets/aboutbutton.png" class="default-img">
-        <img src="assets/button-hover.png" class="hover-img">
+        <img src="assets/aboutbutton-hover.png" class="hover-img">
     </a>
 </nav>
